The Data is Coming from the Database, Add Category and Category is Added on Navbar, not yet fix the Edit Item Category state value

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcryptjs": "latest",
     "body-parser": "latest",
     "concurrently": "^4.1.0",
+    "config": "^3.2.2",
     "express": "latest",
     "graphql": "latest",
     "joi": "^14.3.1",
