Added a Multiple Deletion Using Checkbox on Edit Item, There's Still a Bug, If You Choose any and Click Delete The Items is Updating Properly But There is Still Checked Item on The Item List Even it is Not Checked Before

--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "jsonwebtoken": "latest",
     "mongoose": "latest",
     "morgan": "latest",
-    "multer": "latest"
-  },
-  "devDependencies": {
+    "multer": "latest",
     "nodemon": "^1.18.3"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "nodemon server",
     "client": "npm start --prefix client",
