Fixed SearchBar on sales but searching base on date is not yet implemented, Added a filter on sales routes; if a sale is already been done on the same product, seller and date. the sale only update the sold Item and add only the sold Quantity so that we can prevent multiple sold item creation on the same item wihtin the same day.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "latest",
     "joi": "^14.3.1",
     "jsonwebtoken": "latest",
+    "moment": "^2.24.0",
     "mongoose": "latest",
     "morgan": "latest",
     "multer": "latest",
