--- a/client/package.json
+++ b/client/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "createreactappbase",
+  "name": "inventorysystemfrontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "popper.js": "^1.15.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
+    "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
