--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "popper.js": "^1.16.1",
+    "print.js": "^1.0.18",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
