--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "homepage": ".",
   "dependencies": {
     "bcryptjs": "latest",
     "body-parser": "latest",
